# transcrever

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  QUICK_START.md  README.md  ROADMAP.md  SETUP.md  check_missing.py  configurar.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  teste_whisper.py  transcrever_api.py  transcribe_missing.py
api/: main.py
api/services/: audio.py  whisper_engine.py
config/: settings.template.yaml
frontend/: pnpm-lock.yaml  vercel.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/proxy/[...path]/: route.ts
frontend/app/jobs/: page.tsx
frontend/app/transcricoes/: page.tsx
frontend/components/: JobsTable.tsx  VideoList.tsx  VideoUpload.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx
frontend/lib/: api.ts  types.ts  utils.ts
scripts/: install.bat
src/: __init__.py  main.py
src/core/: __init__.py  video_processor.py
transcricao (1)/2026-04-21/: Rua Coronel Otiles Moreira, 93 25.m4a.txt  Rua Coronel Otiles Moreira, 93 27.m4a.txt  Rua Coronel Otiles Moreira, 93 28.m4a.txt  Rua Coronel Otiles Moreira, 93 29.m4a.txt  Rua Coronel Otiles Moreira, 93 30.m4a.txt  Rua Coronel Otiles Moreira, 93 31.m4a.txt  Rua Coronel Otiles Moreira, 93 32.m4a.txt  Rua Coronel Otiles Moreira, 93 33.m4a.txt  Rua Coronel Otiles Moreira, 93 34.m4a.txt  Rua Coronel Otiles Moreira, 93 35.m4a.txt  Rua Coronel Otiles Moreira, 93 36.m4a.txt  Rua Coronel Otiles Moreira, 93 37.m4a.txt  Rua Coronel Otiles Moreira, 93 38.m4a.txt  Rua Coronel Otiles Moreira, 93 39.m4a.txt  checkup odontologico.txt
